# DTW-ANC

./: .gitattributes  .gitignore  01_generate_data.py  01_generate_data_rot.py  01_generate_data_tr.py  02_ir_assessment.py  03a_calculate_irs.py  03a_generate_data_rtsim.py  03b_build_faust_apps.py  03c_create_innovationsignal.py  03c_run_anc_simulation.py  03d_analysis_anc_simulation.py  03d_run_anc_simulation.py  03e_analysis_anc_simulation.py  LICENSE  README.md  generate_data.py  prototype.ipynb  prototype.py  pyproject.toml  tascar_sim.tsc
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  start_jack.sh
anc_simulation/: anc_record.pd  fn_read.txt  jack_connections.txt  play_record_control.pd  tascar_sim.tsc
code/: 01_generate_data_tr.py  02_ir_assessment.py  02a_dtw_assessment_clat.py  02a_ir_assessment.py  02b_dtw_assessment_clat.py  03_generate_data_rtsim.py  03a_calculate_irs.py  03a_generate_data_rtsim.py  03b_calculate_irs.py  03c_create_innovationsignal.py  03d_create_innovationsignal.py  03d_run_anc_simulation.py  03e_analysis_anc_simulation.py  03e_run_anc_simulation.py  03f_analysis_anc_simulation.py  jcmess  pyproject.toml  run.sh  run_ancsim.sh
code/anc_simulation/: anc_record.pd  jack_connections.txt  tascar_sim.tsc
code/anc_simulation/faust_dsp/: fxlms.dsp  interpolator.h  sec_path_interp.dsp
code/configs/: eval_spacing_rot.toml  eval_spacing_tr.toml  eval_steppattern_rot.toml  eval_steppattern_tr.toml
code/utils/: interpolate.py  metrics.py
configs/: eval_spacing_rot.toml  eval_spacing_tr.toml  eval_steppattern_rot.toml  (+1 more)
(+33 files in other folders)
