[project]
name = "DTW-ANC"
version = "0.1.0"
description = "Dynamic Time Warping for Secondary Path Interpolation in Local Active Noise Control"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dtw-python>=1.7.2",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pyfar>=0.7.3",
    "python-osc>=1.9.3",
    "romanutils>=0.1.0",
    "scipy>=1.16.3",
    "sofar>=1.2.2",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
]
